# QuantGradesApp

./: .gitignore  .tsan-suppressions.txt  CMakeLists.txt  CMakePresets.json  LEGAL_NOTICE.md  README.md  vcpkg.json
.github/workflows/: build.yml
changelog/: v1.0.0.md
cmake/: version.cmake
config/: config.json
examples/: CMakeLists.txt
examples/backtest_demo/: CMakeLists.txt  backtest_demo.cpp
examples/grades_demo/: CMakeLists.txt  Grades.cpp  Grades.hpp  grades_demo.cpp
examples/logger_demo/: CMakeLists.txt  logger_demo.cpp
include/core/: Bootstrap.hpp
include/utils/: LoggerFactory.hpp  NullLogger.hpp
runtime/: README.md
runtime/config/: config.json
src/api/: ApiServer.hpp  CMakeLists.txt
src/apps/qga_api/: CMakeLists.txt  main.cpp
src/cli/: AppCLI.cpp  AppCLI.hpp  CMakeLists.txt  main_cli.cpp
src/core/: AssetsLocator.cpp  Bootstrap.cpp  CMakeLists.txt
tests/: CMakeLists.txt  README.md
tests/e2e/: CMakeLists.txt
tests/fixtures/: BaseTestFixture.hpp  MockLoggerCapture.hpp
tests/integration/: CMakeLists.txt  test_data_ingest_http.cpp
tests/mocks/: MockLoggerGMock.hpp
tests/system/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_api_server.cpp  test_config_json.cpp  test_data_exporter.cpp  test_data_ingest.cpp  test_extended_logger.cpp  test_file_manager.cpp  test_file_manager_gtest.cpp  test_ilogger_gtest.cpp  test_loggerfactory_gtest.cpp  test_mocklogger_caputre_gtest.cpp  test_spdlogger_gtest.cpp
vcpkg_triplets/: x64-windows-static.cmake
